# servant-seo

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  Setup.hs  servant-seo.cabal  stack.yaml
example/: Example.hs  example.cabal
src/Servant/: Seo.hs
src/Servant/Seo/: Combinators.hs  Robots.hs  Sitemap.hs  UI.hs
test/: doctests.hs
