name:                example
version:             1.0
synopsis:            servant-seo demo
description:         servant-seo demo
license:             BSD3
license-file:        LICENSE
author:              Andrey Prokopenko
maintainer:          persiantiger@yandex.ru
copyright:           (c) 2020 Andrey Prokopenko
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable servant-seo-example
  ghc-options:      -Wall
  hs-source-dirs: .
  main-is: Example.hs
  build-depends:  base
                , servant
                , servant-server
                , servant-seo
                , aeson
                , text
                , servant-blaze
                , blaze-markup
                , warp
  default-language: Haskell2010

